# DS18b20

./: .gitignore  RiverBot.service  SPI_devices.json  _matplotlib.py  _streamlit.py  _thingspeak.py  data2csv.py  dev_dict2csv.py  filehandling.py  oneWIRE.py  oneWIRE_devices.json  oneWIRE_dict2csv.py  pyproject.toml  requirements.txt  requrements.txt  spi.py  spi_plot.py  spi_v2.py  spimonitor.service  time_strings.py
Temperature_Mon/: SPI_devices.json  _matplotlib.py  _thingspeak.py  main-refactor.py  main.py  spimonitor.service
poetry-demo/: pyproject.toml
