[tool.poetry]
name = "ds18b20"
version = "0.1.0"
description = "Python routines to monitor One-Wire devices on Linux."
authors = ["Conrad Storz <conradstorz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
